@@ -18,6 +18,8 @@ The rules for this file:
 
   Enhancements
 
+  * MDAnalysis.analysis.contacts.ContactAnalysis1 run() method
+    now allows trajectory slicing (Issue 161)
   * Merge AtomGroups into a new Universe (Issue 157)
   * TPR parser (currently limited to versions 58, 73 and 83 of the
     Gromacs TPR format (Gromacs 4.0 to 4.6.1), see Issue 2)
